--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,12 @@ section {
     color: #ffffff;
 }
 
+.flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 p {
     color: rgb(133, 146, 163);
     font-weight: 400;
@@ -41,9 +47,7 @@ h1 {
     height: 35px;
     border-radius: 50%;
     z-index: 999;
-    display: flex;
     justify-content: center;
-    align-items: center;
     border: 3px solid #c31d1d;
 }
 
@@ -73,9 +77,6 @@ nav {
 }
 
 .nav_flex {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     margin-top: 24px;
 }
 
@@ -110,9 +111,7 @@ nav ul a.active {
 }
 
 .nav_icon_box a {
-    display: flex;
     justify-content: center;
-    align-items: center;
     width: 2.6rem;
     height: 2.6rem;
     font-size: 1.2rem;
@@ -145,10 +144,6 @@ nav ul a.active {
     position: relative;
     overflow: hidden;
     background: #ffffff;
-}
-
-.banner_flex {
-    display: flex;
 }
 
 #banner::after {
@@ -298,49 +293,46 @@ nav ul a.active {
 
 /* quality start */
 #quality {
-    padding: 30px 0 60px 0;
+    padding: 40px 0px;
     background-color: rgb(249, 250, 251);
 }
 
 .quality_flex {
-    display: flex;
+    width: 100%;
     flex-wrap: wrap;
+    height: 250px;
 }
 
 .quality_box {
     display: flex;
-    align-items: center;
-    height: 140px;
-    width: 40%;
-}
-
-.quality_iconBox {
-    margin-right: 1rem;
-    box-shadow: 0 2px 4px 0 rgba(60, 72, 88, 0.286);
+    width: 50%;
+    gap: 4%;
 }
 
 .iconBox {
-    display: flex;
     justify-content: center;
-    align-items: center;
     font-size: 1.4rem;
     color: #ffffff;
     background: #c31d1d;
     border: 3px solid #fabfbf;
     border-radius: 10px;
     padding: .9rem;
+    box-shadow: 0 2px 4px 0 rgba(60, 72, 88, 0.286);
+    width: 3.7rem;
+    height: 3.6rem;
 }
 
 .quality_textBox {
     display: flex;
     flex-direction: column;
+    gap: 5%;
+    height: 100px;
 }
 
 .quality_textBox h1 {
     font-size: 1.125rem;
     font-weight: 400;
     cursor: pointer;
-    margin-bottom: 10px;
 }
 
 .quality_textBox h1:hover {
@@ -349,15 +341,7 @@ nav ul a.active {
 
 .quality_textBox p {
     font-size: 1.01rem !important;
-    width: 450px;
-}
-
-.pmt {
-    margin-top: 1.5rem;
-}
-
-.ml {
-    margin-left: 107px;
+    width: 500px;
 }
 
 /* quality end */
@@ -367,10 +351,6 @@ nav ul a.active {
 #about {
     padding-top: 100px;
     padding-bottom: 50px;
-}
-
-.about_flex {
-    display: flex;
 }
 
 #about .about_imgBox {
@@ -464,7 +444,7 @@ nav ul a.active {
 }
 
 .services_cards .card:hover {
-    transform: translateY(-4px);
+    transform: translateY(-10px);
     box-shadow: 0px 1px 9px 0px rgba(195, 29, 29, 0.3);
 }
 
@@ -499,9 +479,7 @@ nav ul a.active {
 }
 
 .title {
-    display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
 }
 
@@ -526,9 +504,7 @@ nav ul a.active {
 
 
 .slider .slide {
-    display: flex;
     justify-content: center;
-    align-items: center;
     height: 300px;
     background: transparent;
     overflow-x: hidden;
@@ -565,17 +541,14 @@ nav ul a.active {
 }
 
 .clientBox {
-    display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    gap: 10%;
 }
 
 .client {
-    display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    width: 21%;
+    width: 17%;
     height: 125px;
     background: transparent;
     margin-bottom: 70px;
@@ -591,6 +564,7 @@ nav ul a.active {
 /* partners start */
 #partners {
     padding: 100px 0px 30px 0px;
+    text-align: center;
 }
 
 #partners .title {
@@ -600,7 +574,6 @@ nav ul a.active {
 .client h1 {
     margin-top: 30px;
     font-size: 1.1rem;
-    text-align: center;
     font-weight: 600;
 }
 
@@ -619,9 +592,7 @@ nav ul a.active {
 .owner {
     width: 100%;
     height: 500px;
-    display: flex;
     flex-direction: column;
-    align-items: center;
     margin-bottom: 6rem;
 }
 
@@ -668,9 +639,7 @@ nav ul a.active {
 
 
 .teamImg {
-    display: flex;
     justify-content: center;
-    align-items: center;
     border-radius: 50%;
     box-shadow: none;
     width: 200px;
@@ -695,9 +664,7 @@ nav ul a.active {
 
 
 .linkOverlay {
-    display: flex;
     justify-content: center;
-    align-items: center;
     transition: .4s;
     position: absolute;
     width: 100%;
@@ -718,16 +685,9 @@ nav ul a.active {
     background-color: rgb(249, 250, 251);
 }
 
-.contactLinks {
-    display: flex;
-   justify-content: space-between;
-}
-
 .contactItem {
     width: 30%;
-    display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 .contactIcon {
@@ -758,12 +718,6 @@ margin-bottom: 10px;
 footer {
     padding: 40px 0px;
     background:rgb(22, 28, 45);
-}
-
-.footer_flex {
-display: flex;
-justify-content: space-between;
-align-items: center;
 }
 
 footer h1 {
@@ -800,10 +754,6 @@ background: #c31d1d!important;
 /* cv start */
 #cv {
     padding: 100px 0px;
-}
-
-.cv_flex {
-    display: flex;
 }
 
 #cv .title {
