--- a/css/style.css
+++ b/css/style.css
@@ -274,7 +274,8 @@ nav ul a.active {
         opacity: 1;
 
     }
-/* 
+
+    /* 
     25% {
         opacity: 1;
 
@@ -294,7 +295,8 @@ nav ul a.active {
     0% {
         opacity: 1;
     }
-/* 
+
+    /* 
     25% {
         opacity: 1;
     }
@@ -532,19 +534,21 @@ nav ul a.active {
 }
 
 .slide .item {
-    width: 96%;
+    width: 98%;
     height: 90%;
     box-shadow: 0px 0px 5px 3px rgba(0, 3, 2, 0.3);
     transition: .4s;
-}
-
-.item:hover {
-    transform: scale(1.1);
+    overflow: hidden;
 }
 
 .item img {
     width: 100%;
     height: 100%;
+    transition: all .4s ease;
+}
+
+.item img:hover {
+    transform: scale(1.05);
 }
 
 .slick-dots li button:before {
@@ -675,16 +679,6 @@ nav ul a.active {
 
 }
 
-/* .teamImg img {
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-} */
-
 .teamImg img {
     position: absolute;
     z-index: -1;
@@ -697,17 +691,35 @@ nav ul a.active {
 
 
 .linkOverlay {
+    position: relative;
     justify-content: center;
     transition: .4s;
-    position: absolute;
     width: 100%;
-    height: 100%;
-    border-radius: 50%;
+    height: 240px;
+    transform: translateY(11%);
     z-index: 1;
+   
 }
 
 .linkOverlay:hover {
+    transform: translateY(-13%);
     box-shadow: 0px -50px 75px 1px rgba(0, 0, 0, 0.75) inset;
+
+}
+
+.linkOverlay a {
+    position: absolute;
+    bottom: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.linkOverlay a img {
+    position: absolute;
+    bottom: 0%;left: 50%;
+    transform: translateX(-50%);
+    width:37.5px;
+    height:37.5px;
 }
 
 /* team end */
